--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -54,6 +54,18 @@
     <Compile Include="Client_Load.Designer.cs">
       <DependentUpon>Client_Load.cs</DependentUpon>
     </Compile>
+    <Compile Include="Client_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Client_Modify.Designer.cs">
+      <DependentUpon>Client_Modify.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Delete_Client.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Delete_Client.Designer.cs">
+      <DependentUpon>Delete_Client.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\Client.cs" />
     <Compile Include="Entidades\User.cs" />
     <Compile Include="Logged.cs">
@@ -72,6 +84,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Client_Load.resx">
       <DependentUpon>Client_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Client_Modify.resx">
+      <DependentUpon>Client_Modify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Delete_Client.resx">
+      <DependentUpon>Delete_Client.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Logged.resx">
       <DependentUpon>Logged.cs</DependentUpon>
