--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ABM Tarjetas\test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABM Tarjetas\test.Designer.cs">
+      <DependentUpon>test.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABMS\ABM Cliente\Client_Delete.cs">
       <SubType>Form</SubType>
     </Compile>
