--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -90,11 +90,23 @@
     <Compile Include="ABMS\ABM Productos\Product_Modify.Designer.cs">
       <DependentUpon>Product_Modify.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Delete.Designer.cs">
+      <DependentUpon>VehicleType_Delete.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Load.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Load.Designer.cs">
       <DependentUpon>VehicleType_Load.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Modify.Designer.cs">
+      <DependentUpon>VehicleType_Modify.cs</DependentUpon>
     </Compile>
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\Producto.cs" />
@@ -143,8 +155,14 @@
     <EmbeddedResource Include="ABMS\ABM Productos\Product_Modify.resx">
       <DependentUpon>Product_Modify.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM TipoVehiculo\VehicleType_Delete.resx">
+      <DependentUpon>VehicleType_Delete.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM TipoVehiculo\VehicleType_Load.resx">
       <DependentUpon>VehicleType_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM TipoVehiculo\VehicleType_Modify.resx">
+      <DependentUpon>VehicleType_Modify.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Logged.resx">
       <DependentUpon>Logged.cs</DependentUpon>
