--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -84,6 +84,12 @@
     <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Load.Designer.cs">
       <DependentUpon>VehicleType_Load.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM Usuario\User_Load.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Usuario\User_Load.Designer.cs">
+      <DependentUpon>User_Load.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\Producto.cs" />
     <Compile Include="Entidades\TipoComercio.cs" />
@@ -127,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM TipoVehiculo\VehicleType_Load.resx">
       <DependentUpon>VehicleType_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Usuario\User_Load.resx">
+      <DependentUpon>User_Load.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Logged.resx">
       <DependentUpon>Logged.cs</DependentUpon>
@@ -184,7 +193,6 @@
     <Folder Include="ABMS\ABM TipoDocumento\" />
     <Folder Include="ABMS\ABM TipoEstadoCivil\" />
     <Folder Include="ABMS\ABM TipoSexo\" />
-    <Folder Include="ABMS\ABM Usuario\" />
     <Folder Include="ABMS\ABM Vehiculos\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
